# true-ledger-cms

./: Cargo.toml  README.md
 core/: Cargo.toml
 core/src/: ledger.rs  lib.rs  network.rs  storage.rs  sync.rs
core/: Cargo.toml
desktop/: tauri.conf.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
mobile/: capacitor.config.ts
plugins/invoicing/: Cargo.toml
working-app/: package-lock.json  package.json
working-app/src-tauri/: Cargo.toml  tauri.conf.json
working-app/src-tauri/src/: main.rs
